Udating the code without redis and imagekit

--- a/views/updateuser.ejs
+++ b/views/updateuser.ejs
@@ -4,7 +4,7 @@
 
 <img
     class="avatar-preview w-[10vh] h-[10vh] rounded-full object-cover object-center"
-    src="<%= user.avatar.url%>"
+    src="/images/<%= user.avatar%>"
     alt=""
 />
 <form
