--- a/views/showexpense.ejs
+++ b/views/showexpense.ejs
@@ -1,14 +1,18 @@
-<%- include("partials/header")%> <%- include("partials/nav")%>
-<!--  -->
-<h1>Watch Expense</h1>
-<ul>
-    <% user.expenses.forEach(function(expense) { %>
-    <li>
-        <%= expense.title %> |
-        <a href="/expense/details/<%= expense.id%>">Details</a>
-    </li>
-    <% }) %>
-</ul>
+<%- include("partials/header")%>
+    <%- include("partials/nav")%>
+        <!--  -->
+        <h1>Watch Expense</h1>
+        <ul>
+            <% expenses.forEach(function(expense) { %>
+                <li>
 
-<!--  -->
-<%- include("partials/footer")%>
+                    <%= expense.title %> |
+                        <a href="/expense/details/<%= expense.id%>">Details</a>
+
+
+                </li>
+                <% }) %>
+        </ul>
+
+        <!--  -->
+        <%- include("partials/footer")%>
